Copy pasting audio strip from video crash Blender #65814

Closed
opened 2019-06-14 19:55:32 +02:00 by Guillem de Diego · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-14 00:12, hash: 8ac0fef4df
Worked: (optional)

Short description of error
Copy and Paste audio strip from video crashes Blender

Exact steps for others to reproduce the error
Open default Video Editing layout, load some video on the Sequencer, select the audio strip, copy and paste.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-14 00:12, hash: `8ac0fef4df` Worked: (optional) **Short description of error** Copy and Paste audio strip from video crashes Blender **Exact steps for others to reproduce the error** Open default Video Editing layout, load some video on the Sequencer, select the audio strip, copy and paste.

Added subscriber: @Unsigno

Added subscriber: @Unsigno

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2019-06-14 20:15:20 +02:00

BLI_assert failed: //source/blender/blenkernel/intern/sound.c:88, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)'
Full backtrace: P1004

`BLI_assert failed: //source/blender/blenkernel/intern/sound.c:88, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)'` Full backtrace: [P1004](https://archive.blender.org/developer/P1004.txt)

This issue was referenced by f640701858

This issue was referenced by f64070185808f153d141b26e63942424a1b258b1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65814
No description provided.