Fix T65814: Copy pasting audio strip from video crash Blender